--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Igor Campos</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/studentmeets_4873.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="novo-valor-de-integridade" crossorigin="anonymous">
+
 </head>
 <body>
     <header>
@@ -20,6 +22,16 @@
     <main>
         <div class="principal">
             <section class="info">
+                <h3>Contatos</h3>
+                <p>Belo Horizonte - Minas Gerais</p>
+                <hr>
+                <ul class="social-icons">
+                    <li><a href="mailto:igor.eng.eletrica.2022.2@gmail.com"><i class="fas fa-envelope"></i></a></li>
+                    <li><a href="https://github.com/CEFET-Igor" target="_blank"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/igorguicampos/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://www.instagram.com/igorguimaraescampos/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                </ul>
+                <hr>
             </section>
             <section class="detalhes">
             
