--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <img src="https:www.github.com/CEFET-igor.png" alt="Foto de perfil" class="perfil">
         <section class="apresentacao">
             <h1>Igor Augusto Guimaraes Campos</h1>
-            <h2>Estudante de Engenharia de Eletrica</h2>
-            <p>Estudante do 5º período de Engenharia de Eletrica no CEFET-MG.</p>
+            <p class="justify">Estudante de Engenharia Elétrica no CEFET-MG, com ênfase nas áreas de computação e elétrica. Envolvido em projetos de iniciação científica e extensão, apliquei conhecimentos teóricos em cenários práticos e colaborativos. Busco constantemente expandir habilidades através de cursos externos, mantendo-me atualizado em tecnologias relevantes. Ansioso para aplicar insights e contribuir de forma inovadora em ambientes profissionais.</p>
         </section>           
     </header> 
     
@@ -32,9 +31,41 @@
                     <li><a href="https://www.instagram.com/igorguimaraescampos/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 </ul>
                 <hr>
+                <section class="formacao">
+                    <h3>Formação</h3>
+                    <div>
+                        <p>Bacharelado em Engenharia de Eletrica</p>
+                        <p>CEFET-MG - <b>Em progresso</b></p>
+                    </div>
+                    <div>
+                        <p>Tecnico em Eletrotecnica</p>
+                        <p>E.E.Professor fontes - <b>concluido 2018</b></p>
+                    </div>
+                    <div>
+                        <p>Eletricis de Manutenção Eletrica</p>
+                        <p>SENAI - <b>concluido 2017</b></p>
+                    </div>
+                </section>
             </section>
             <section class="detalhes">
-            
+                <section class="experiencias">
+                    <h3>Experiencias</h3>
+                    <div>
+                        <p class="destaque capitalize">Estagiário de desenvolvimento web</p>
+                        <p class="upper">decon/cefet-mg <b class="capitalize">abril/2022 - atualmente.</b></p>
+                        <p class="justify">Participei do projeto de Iniciação Científica, contribuindo para o "Qualidade Redações", liderando o processamento e integração de dados no back-end da plataforma de correção de redações online para a comunidade CEFET-MG. Obtive valiosa experiência em GIT, Django, Python e Javascript, aprimorando minhas habilidades tecnológicas.</p>
+                    </div>
+                    <div>
+                        <p class="destaque capitalize">Estagiário Machine Learning</p>
+                        <p class="upper">decon/cefet-mg <b class="capitalize">abril/2022 - atualmente.</b></p>
+                        <p class="justify">Voluntário no projeto "IA Construção Civil", onde apliquei conceitos de estimativa e análise de dados para desenvolver um modelo preditivo da carbonatação em cimentos de vigas. Contribuí para aprimorar práticas na Construção Civil, além de participar de um projeto de iniciação científica, consolidando minha experiência em pesquisa e tecnologia.</p>
+                    </div>
+                    <div>
+                        <p class="destaque capitalize">projeto enchurrada de bits</p>
+                        <p class="upper">decon/cefet-mg <b class="capitalize">março/2023 - atualmente.</b></p>
+                        <p class="justify">Participação como monitor no projeto de extensão "ENXURRADA DE BITS" do CEFET-MG, lecionando cursos de robótica e informatica para alunos de 12 a 16 anos em escolas públicas da região de Belo Horizonte. Atividades incluem esclarecimento de dúvidas, chamadas e, ocasionalmente, ministração de aulas sobre temas relacionados.</p>
+                    </div>
+                </section> 
             </section>
         </div>
         <section class="projetos">
