--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
             </section>
             <section class="detalhes">
                 <section class="experiencias">
-                    <h3>Experiencias</h3>
+                    <h3>Experiências</h3>
                     <div>
                         <p class="destaque capitalize">Estagiário de desenvolvimento web</p>
-                        <p class="upper">decon/cefet-mg <b class="capitalize">abril/2022 - atualmente.</b></p>
+                        <p class="upper">decom/cefet-mg <b class="capitalize">abril/2022 - atualmente.</b></p>
                         <p class="justify">Participei do projeto de Iniciação Científica, contribuindo para o "Qualidade Redações", liderando o processamento e integração de dados no back-end da plataforma de correção de redações online para a comunidade CEFET-MG. Obtive valiosa experiência em GIT, Django, Python e Javascript, aprimorando minhas habilidades tecnológicas.</p>
                     </div>
                     <div>
                         <p class="destaque capitalize">Estagiário Machine Learning</p>
-                        <p class="upper">decon/cefet-mg <b class="capitalize">abril/2022 - atualmente.</b></p>
+                        <p class="upper">decom/cefet-mg <b class="capitalize">abril/2022 - atualmente.</b></p>
                         <p class="justify">Voluntário no projeto "IA Construção Civil", onde apliquei conceitos de estimativa e análise de dados para desenvolver um modelo preditivo da carbonatação em cimentos de vigas. Contribuí para aprimorar práticas na Construção Civil, além de participar de um projeto de iniciação científica, consolidando minha experiência em pesquisa e tecnologia.</p>
                     </div>
                     <div>
                         <p class="destaque capitalize">projeto enchurrada de bits</p>
-                        <p class="upper">decon/cefet-mg <b class="capitalize">março/2023 - atualmente.</b></p>
+                        <p class="upper">decom/cefet-mg <b class="capitalize">março/2023 - atualmente.</b></p>
                         <p class="justify">Participação como monitor no projeto de extensão "ENXURRADA DE BITS" do CEFET-MG, lecionando cursos de robótica e informatica para alunos de 12 a 16 anos em escolas públicas da região de Belo Horizonte. Atividades incluem esclarecimento de dúvidas, chamadas e, ocasionalmente, ministração de aulas sobre temas relacionados.</p>
                     </div>
                 </section> 
