--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <p>E.E.Professor fontes - <b>concluido 2018</b></p>
                     </div>
                     <div>
-                        <p>Eletricis de Manutenção Eletrica</p>
+                        <p>Eletricista de Manutenção Eletrica</p>
                         <p>SENAI - <b>concluido 2017</b></p>
                     </div>
                 </section>
@@ -69,8 +69,69 @@
             </section>
         </div>
         <section class="projetos">
-            
+            <h3>Projetos</h3>
+            <p class="justify">Ao longo de minha jornada, tenho projetado e implementado projetos específicos 
+                para fortalecer habilidades fundamentais para desenvolvimento front-end. Esses projetos abrangem 
+                a aplicação prática de conceitos como manipulação de imagens, seleção de fontes e paletas de cores, 
+                além da implementação eficaz de Flexbox e Grid para layouts responsivos.</p>
+            <section class="cards">
+                <div class="card">
+                    <h4 class="capitalize">desafio: designer de interiores</h4>
+                    <p> O desafio é criar uma homepage responsiva para um consultório 
+                        de interiores. </p>
+                    <div class="buttons">
+                        <button><a href="https://cefet-igor.github.io/Challenge-interior-consultant/" target="_blank">Demo</a></button>
+                        <button><a href="https://github.com/CEFET-Igor/Challenge-interior-consultant?tab=readme-ov-file" target="_blank">Projeto</a></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <h4 class="capitalize">desafio: my team page</h4>
+                    <p>Desafio para trabalhar com HTML e CSS, explorando o uso eficaz de
+                        imagens, e ferramentas de layout responsivo.</p>
+                    <div class="buttons">
+                        <button><a href="https://cefet-igor.github.io/Challenge-my-team-page/" target="_blank">Demo</a></button>
+                        <button><a href="https://github.com/CEFET-Igor/Challenge-my-team-page" target="_blank">Projeto</a></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <h4 class="capitalize">Desafio: Erro 404</h4>
+                    <p>Este foi primeiro desafio front-end, criando uma página estática 
+                        de "Erro 404".</p>
+                        <div class="buttons">
+                            <button><a href="https://cefet-igor.github.io/Challeng-404-not-found/" target="_blank">Demo</a></button>
+                            <button><a href="https://github.com/CEFET-Igor/Challeng-404-not-found" target="_blank">Projeto</a></button>
+                        </div>
+                </div>
+                <div class="card">
+                    <h4 class="capitalize">Projeto Cordel Moderno</h4>
+                    <p>Desafio proposto por Gustavo Guanabara em seu curso HTML-CSS.</p>
+                    <div class="buttons">
+                        <button><a href="https://cefet-igor.github.io/Projeto-Cordel-Moderno/" target="_blank">Demo</a></button>
+                        <button><a href="https://github.com/CEFET-Igor/Projeto-Cordel-Moderno" target="_blank">Projeto</a></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <h4 class="capitalize">projeto androide</h4>
+                    <p>Desafio proposto por Gustavo Guanabara em seu curso HTML-CSS.</p>
+                    <div class="buttons">
+                        <button><a href="https://cefet-igor.github.io/Projeto-Androide/" target="_blank">Demo</a></button>
+                        <button><a href="https://github.com/CEFET-Igor/Projeto-Androide" target="_blank">Projeto</a></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <h4 class="capitalize">pagina de login</h4>
+                    <p>Desenvolvi uma página de login interativa com animações nos campos de preenchimento.</p>
+                    <div class="buttons">
+                        <button><a href="https://cefet-igor.github.io/Login-Page" target="_blank">Demo</a></button>
+                        <button><a href="https://github.com/CEFET-Igor/Login-Page" target="_blank">Projeto</a></button>
+                    </div>
+                </div>
+            </section>
+                         
         </section>
     </main>
+    <footer>
+        <p>created by <a href="https://github.com/CEFET-Igor" target="_blank">Igor Campos</a></p>
+    </footer>
 </body>
 </html>
