--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="https:www.github.com/CEFET-igor.png" alt="Foto de perfil" class="perfil">
+        <img src="https://www.github.com/CEFET-igor.png" alt="Foto de perfil" class="perfil">
         <section class="apresentacao">
             <h1>Igor Augusto Guimaraes Campos</h1>
             <p class="justify">Estudante de Engenharia Elétrica no CEFET-MG, com ênfase nas áreas de computação e elétrica. Envolvido em projetos de iniciação científica e extensão, apliquei conhecimentos teóricos em cenários práticos e colaborativos. Busco constantemente expandir habilidades através de cursos externos, mantendo-me atualizado em tecnologias relevantes. Ansioso para aplicar insights e contribuir de forma inovadora em ambientes profissionais.</p>
@@ -77,7 +77,7 @@
             <section class="cards">
                 <div class="card">
                     <h4 class="capitalize">desafio: designer de interiores</h4>
-                    <p> O desafio é criar uma homepage responsiva para um consultório 
+                    <p class="justify"> O desafio é criar uma homepage responsiva para um consultório 
                         de interiores. </p>
                     <div class="buttons">
                         <button><a href="https://cefet-igor.github.io/Challenge-interior-consultant/" target="_blank">Demo</a></button>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="card">
                     <h4 class="capitalize">desafio: my team page</h4>
-                    <p>Desafio para trabalhar com HTML e CSS, explorando o uso eficaz de
+                    <p class="justify">Desafio para trabalhar com HTML e CSS, explorando o uso eficaz de
                         imagens, e ferramentas de layout responsivo.</p>
                     <div class="buttons">
                         <button><a href="https://cefet-igor.github.io/Challenge-my-team-page/" target="_blank">Demo</a></button>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="card">
                     <h4 class="capitalize">Desafio: Erro 404</h4>
-                    <p>Este foi primeiro desafio front-end, criando uma página estática 
+                    <p class="justify">Este foi primeiro desafio front-end, criando uma página estática 
                         de "Erro 404".</p>
                         <div class="buttons">
                             <button><a href="https://cefet-igor.github.io/Challeng-404-not-found/" target="_blank">Demo</a></button>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="card">
                     <h4 class="capitalize">Projeto Cordel Moderno</h4>
-                    <p>Desafio proposto por Gustavo Guanabara em seu curso HTML-CSS.</p>
+                    <p class="justify">Desafio proposto por Gustavo Guanabara em seu curso HTML-CSS.</p>
                     <div class="buttons">
                         <button><a href="https://cefet-igor.github.io/Projeto-Cordel-Moderno/" target="_blank">Demo</a></button>
                         <button><a href="https://github.com/CEFET-Igor/Projeto-Cordel-Moderno" target="_blank">Projeto</a></button>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="card">
                     <h4 class="capitalize">projeto androide</h4>
-                    <p>Desafio proposto por Gustavo Guanabara em seu curso HTML-CSS.</p>
+                    <p class="justify">Desafio proposto por Gustavo Guanabara em seu curso HTML-CSS.</p>
                     <div class="buttons">
                         <button><a href="https://cefet-igor.github.io/Projeto-Androide/" target="_blank">Demo</a></button>
                         <button><a href="https://github.com/CEFET-Igor/Projeto-Androide" target="_blank">Projeto</a></button>
@@ -120,7 +120,7 @@
                 </div>
                 <div class="card">
                     <h4 class="capitalize">pagina de login</h4>
-                    <p>Desenvolvi uma página de login interativa com animações nos campos de preenchimento.</p>
+                    <p class="justify">Desenvolvi uma página de login interativa com animações nos campos de preenchimento.</p>
                     <div class="buttons">
                         <button><a href="https://cefet-igor.github.io/Login-Page" target="_blank">Demo</a></button>
                         <button><a href="https://github.com/CEFET-Igor/Login-Page" target="_blank">Projeto</a></button>
