--- a/index.html
+++ b/index.html
@@ -39,12 +39,22 @@
                     </div>
                     <div>
                         <p>Tecnico em Eletrotecnica</p>
-                        <p>E.E.Professor fontes - <b>concluido 2018</b></p>
+                        <p>E.E.Professor fontes - <b>concluído 2018</b></p>
                     </div>
                     <div>
                         <p>Eletricista de Manutenção Eletrica</p>
-                        <p>SENAI - <b>concluido 2017</b></p>
+                        <p>SENAI - <b>concluído 2017</b></p>
                     </div>
+                </section>
+                <section class="cursos">
+                    <h3>Cursos</h3>
+                    <ul>
+                        <li>Django - <b>concluído 2023</b></li>
+                        <li>Git e Github - <b>concluído 2023</b></li>
+                        <li>JavaScript - <b>concluído 2023</b></li>
+                        <li>HTML5 e CSS3 - <b>concluído 2023</b></li>
+                        <li>Python - <b>concluído 2022</b></li>
+                    </ul>
                 </section>
             </section>
             <section class="detalhes">
