--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
         <img src="https://www.github.com/CEFET-igor.png" alt="Foto de perfil" class="perfil">
         <section class="apresentacao">
             <h1>Igor Augusto Guimaraes Campos</h1>
-            <p class="justify">Estudante de Engenharia Elétrica no CEFET-MG, com ênfase nas áreas de computação e elétrica. Envolvido em projetos de iniciação científica e extensão, apliquei conhecimentos teóricos em cenários práticos e colaborativos. Busco constantemente expandir habilidades através de cursos externos, mantendo-me atualizado em tecnologias relevantes. Ansioso para aplicar insights e contribuir de forma inovadora em ambientes profissionais.</p>
+            <p class="justify">
+                Estudante de Engenharia Elétrica no CEFET-MG, com ênfase nas áreas de 
+                computação e elétrica. Participo ativamente de projetos de iniciação 
+                científica e extensão, onde aplico meus conhecimentos teóricos de forma 
+                prática e colaborativa. Estou constantemente buscando expandir minhas 
+                habilidades através de cursos externos e me mantenho atualizado em 
+                tecnologias relevantes. Ansioso para aplicar meus insights e 
+                contribuir de forma inovadora em ambientes profissionais.
+            </p>
         </section>           
     </header> 
     
@@ -34,15 +42,15 @@
                 <section class="formacao">
                     <h3>Formação</h3>
                     <div>
-                        <p>Bacharelado em Engenharia de Eletrica</p>
+                        <p>Bacharelado em Engenharia Elétrica</p>
                         <p>CEFET-MG - <b>Em progresso</b></p>
                     </div>
                     <div>
-                        <p>Tecnico em Eletrotecnica</p>
+                        <p>Técnico em Eletrotécnica</p>
                         <p>E.E.Professor fontes - <b>concluído 2018</b></p>
                     </div>
                     <div>
-                        <p>Eletricista de Manutenção Eletrica</p>
+                        <p>Elétricista de Manutenção Elétrica</p>
                         <p>SENAI - <b>concluído 2017</b></p>
                     </div>
                 </section>
@@ -63,17 +71,35 @@
                     <div>
                         <p class="destaque capitalize">Estagiário de desenvolvimento web</p>
                         <p class="upper">decom/cefet-mg <b class="capitalize">abril/2022 - atualmente.</b></p>
-                        <p class="justify">Participei do projeto de Iniciação Científica, contribuindo para o "Qualidade Redações", liderando o processamento e integração de dados no back-end da plataforma de correção de redações online para a comunidade CEFET-MG. Obtive valiosa experiência em GIT, Django, Python e Javascript, aprimorando minhas habilidades tecnológicas.</p>
+                        <p class="justify">
+                            Estagiário de Desenvolvimento Web no DECOM/CEFET-MG, onde contribuí 
+                            para o projeto "Qualidade Redações", liderando o processamento e 
+                            integração de dados no back-end da plataforma de correção de 
+                            redações online. Adquiri habilidades em GIT, Django, Python e 
+                            Javascript durante esta experiência.
+                        </p>
                     </div>
                     <div>
                         <p class="destaque capitalize">Estagiário Machine Learning</p>
                         <p class="upper">decom/cefet-mg <b class="capitalize">abril/2022 - atualmente.</b></p>
-                        <p class="justify">Voluntário no projeto "IA Construção Civil", onde apliquei conceitos de estimativa e análise de dados para desenvolver um modelo preditivo da carbonatação em cimentos de vigas. Contribuí para aprimorar práticas na Construção Civil, além de participar de um projeto de iniciação científica, consolidando minha experiência em pesquisa e tecnologia.</p>
+                        <p class="justify">
+                            Estagiário de Machine Learning no DECOM/CEFET-MG, participo como 
+                            voluntariodo projeto "IA Construção Civil". Nele, aplicamos conceitos 
+                            de estimativa e análise de dados para desenvolver um modelo preditivo 
+                            da carbonatação em cimentos de vigas, contribuindo para aprimorar 
+                            práticas na Construção Civil.
+                        </p>
                     </div>
                     <div>
                         <p class="destaque capitalize">projeto enchurrada de bits</p>
                         <p class="upper">decom/cefet-mg <b class="capitalize">março/2023 - atualmente.</b></p>
-                        <p class="justify">Participação como monitor no projeto de extensão "ENXURRADA DE BITS" do CEFET-MG, lecionando cursos de robótica e informatica para alunos de 12 a 16 anos em escolas públicas da região de Belo Horizonte. Atividades incluem esclarecimento de dúvidas, chamadas e, ocasionalmente, ministração de aulas sobre temas relacionados.</p>
+                        <p class="justify">
+                            Participação como monitor no projeto de extensão "ENXURRADA DE BITS" 
+                            do CEFET-MG, lecionando cursos de robótica e informatica para alunos 
+                            de 12 a 16 anos em escolas públicas da região de Belo Horizonte. 
+                            Atividades incluem esclarecimento de dúvidas, chamadas e, 
+                            ocasionalmente, ministração de aulas sobre temas relacionados.
+                        </p>
                     </div>
                 </section> 
             </section>
