--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Igor Campos</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/studentmeets_4873.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="novo-valor-de-integridade" crossorigin="anonymous">
-</head>
-<body>
-  <main>
-    <section class="left">
-        <img src="https://www.github.com/IgorGuiCampos.png" alt="Foto de perfil" class="perfil">
-        
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="img/studentmeets_4873.ico"
+      type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+  </head>
+  <body>
+    <main>
+      <section class="left">
+        <img
+          src="https://www.github.com/IgorGuiCampos.png"
+          alt="Foto de perfil"
+          class="perfil" />
+
         <section class="Idiomas">
           <h1>Idiomas</h1>
           <ul class="idiomas">
@@ -47,58 +55,112 @@
             <li>Ingles Avançado - CEFET-MG</li>
           </ul>
         </section>
-    </section>
-    
-    <section class="right">
-
-      <section class="Info-Pessoal">
-        <h1>Igor Augusto Guimarães Campos</h1>
-        <p>Belo Horizonte - MG</p>
-        <div class="contat">
-          <a href="https://www.linkedin.com/in/igorguicampos/" target="_blank">Linkkedin</a>
-          <a href="https://www.github.com/IgorGuiCampos" target="_blank">GitHub</a>
-          <a href="mailto:igoraugustogc@gmail.com" target="_blank">email</a>
-          <a 
-            href="https://wa.me/5531992896956?text=Olá!%0AEstou%20te%20mandando%20mensagem%20através%20do%20seu%20currículo%20virtual." 
-            target="_blank" 
-            class="whatsapp-link">
-            (31) 99289-6956
-          </a>
-        </div>
       </section>
 
-      <section class="Resumo">
+      <section class="right">
+        <section class="Info-Pessoal">
+          <h1 class="name">Igor Augusto Guimarães Campos</h1>
+          <div class="Info-Pessoal">
+            <span>Brasileiro</span>
+            <span>Belo Horizonte - MG</span>
+            <span>Data de Nascimento: 30/03/2000</span>
+          </div>
+
+          <div class="contact">
+            <a
+              href="https://www.linkedin.com/in/igorguicampos/"
+              target="_blank"
+              class="Social-link linkedin">
+              <i class="bi bi-linkedin linkedin"></i>
+              <span>Igor Campos</span>
+            </a>
+            <a
+              href="https://github.com/CEFET-Igor"
+              target="_blank"
+              class="Social-link github">
+              <i class="bi bi-github github"></i>
+              <span>CEFET-Igor</span>
+            </a>
+            <a
+              href="mailto:igoraugustogc@gmail.com"
+              target="_blank"
+              class="Social-link email">
+              <i class="bi bi-envelope email"></i>
+              <span>igoraugustogc@gmail.com</span>
+            </a>
+            <a
+              href="https://wa.me/5531992896956?text=Olá!%0AEstou%20te%20mandando%20mensagem%20através%20do%20seu%20currículo%20virtual."
+              target="_blank"
+              class="Social-link whatsapp">
+              <i class="bi bi-whatsapp whatsapp"></i>
+              <span>(31) 99289-6956</span>
+            </a>
+          </div>
+        </section>
+
+        <section class="Resumo">
           <h1>Resumo</h1>
-          <p>Estudante de Engenharia de Computação, com conhecimento em HTML, CSS, JavaScript, Python, Django, Git e Linux. Inglês avançado e pacote Office avançado. Procurando oportunidades para desenvolver minhas habilidades e crescer profissionalmente.</p>
+          <p>
+            Estudante de Engenharia de Computação, com conhecimento em HTML,
+            CSS, JavaScript, Python, Django, Git e Linux. Inglês avançado e
+            pacote Office avançado. Procurando oportunidades para desenvolver
+            minhas habilidades e crescer profissionalmente.
+          </p>
+        </section>
+
+        <section class="Experiencias">
+          <h1>Experiencias</h1>
+
+          <div class="info">
+            <h2>Estagiário de Desenvolvimento Web</h2>
+            <h3><strong>DECOM/CEFET-MG</strong> (Fev. 2022 - Jul. 2024)</h3>
+          </div>
+          <p>
+            Desenvolvimento de atividades de Front-end utilizando HTML, CSS e
+            Bootstrap e Back-end utilizando Python, Django e JavaScript.
+            Integração e gerenciamento de banco de dados PostgreSQL. Controle de
+            versionamento com Bitbucket.
+          </p>
+
+          <div class="info">
+            <h2>Estagiário de Machine Learning</h2>
+            <h3><strong>DECOM/CEFET-MG</strong> (Mar. 2022 - Mar. 2025)</h3>
+          </div>
+          <p>
+            Desenvolvimento de modelos preditivos para análise da carbonatação
+            em estruturas de concreto armado. Utilização de Python e bibliotecas
+            como Pandas, NumPy, Scikit-learn e Matplotlib. Organização e
+            controle de versão com repositório GitHub.
+          </p>
+
+          <div class="info">
+            <h2>Monitor voluntário</h2>
+            <h3><strong>DECOM/CEFET-MG</strong> (Abr. 2023 - Jan. 2025)</h3>
+          </div>
+          <p>
+            Planejamento e ensino de aulas práticas de robótica e informática
+            para jovens de 12 a 16 anos em escolas públicas. Trabalhamos com
+            ferramentas open source, lecionando LibreOffice, Canva e GIMP.
+          </p>
+        </section>
+
+        <section class="Formação">
+          <h1>Formação Academica</h1>
+          <div>
+            <h2>Bacharelado em Engenharia Elétrica</h2>
+            <h3><strong>CEFET/MG</strong> (Out. 2021 - Atualmente)</h3>
+          </div>
+
+          <div>
+            <h2>Curso técnico em eletrotécnica</h2>
+            <h3>
+              <strong>E.E. Professor Fontes</strong> (Ago. 2017 - Dez. 2018)
+            </h3>
+          </div>
+        </section>
       </section>
+    </main>
 
-      <section class="Experiencias">
-        <h1>Experiencias</h1>
-        <h2>Professor voluntário</h2>
-        <p><strong>DECOM/CEFET-MG</strong></p>
-        <p>Planejamento e ensino de aulas práticas de robótica e informática para jovens de 12 a 16 anos em escolas públicas. Trabalhamos com ferramentas open source, lecionando LibreOffice, Canva e GIMP.</p>
-        <h2>Estagiário de Machine Learning</h2>
-        <p><strong>DECOM/CEFET-MG</strong></p>
-        <p>Desenvolvimento de modelos preditivos para análise da carbonatação em estruturas de concreto armado. Utilização de Python e bibliotecas como Pandas, NumPy, Scikit-learn e Matplotlib. Organização e controle de versão com repositório GitHub.</p>
-        <h2>Estagiário de Desenvolvimento Web</h2>
-        <p><strong>DECOM/CEFET-MG</strong></p>
-        <p>2 anos e 3 meses (Abr. 2022 - Jul. 2024)</p>
-        <p>Desenvolvimento de atividades de Front-end utilizando HTML, CSS e Bootstrap e Back-end utilizando Python, Django e JavaScript. Integração e gerenciamento de banco de dados PostgreSQL. Controle de versionamento com Bitbucket.</p>
-      </section>
-
-      <section class="Formação">
-        <h1>Formação Academica</h1>
-        <h2>Bacharelado em Engenharia Elétrica</h2>
-        <p><strong>CEFET/MG</strong></p>
-        <p>Out. 2021 - Até O Momento</p>
-        <h2>Curso técnico em eletrotécnica</h2>
-        <p><strong>E.E. Professor Fontes</strong></p>
-        <p>Ago. 2017 - Dez. 2018</p>
-      </section>
-
-    </section>
-  </main>
-
-  <script src="index.js"></script>
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
