feat: Adicionado os cards de projetos

--- a/index.html
+++ b/index.html
@@ -160,6 +160,165 @@
         </section>
       </section>
     </main>
+    <section class="projetos">
+      <h1>Projetos</h1>
+      <p>
+        Durante meu aprendizado em desenvolvimento web, tenho trabalhado em
+        diversos projetos e em alguns desafios web como forma de treinar,
+        aprender, e aplicar boas práticas de programação, principalmente na area
+        de front-end.
+      </p>
+      <p>
+        Nos cards abaixo, apresento alguns dos projetos que desenvolvi. Neles, utilizei
+        conceitos como HTML semântico, técnicas de CSS para responsividade, além
+        de lógica para estilização e programação com pseudo-elementos em CSS,
+        HTML e JavaScript.
+      </p>
+      <p>
+        Cada card tem um link para a demonstração do resultado final e
+        também para o repositório no GitHub, onde você pode conferir o README
+        com mais detalhes sobre cada um deles.
+      </p>
+
+      <section class="cards">
+        <div class="card">
+          <h2 class="capitalize">Desafio: designer de interiores</h2>
+          <p>
+            O desafio é criar uma homepage responsiva para um consultório de
+            interiores.
+          </p>
+          <div class="buttons">
+            <button>
+              <a
+                href="https://cefet-igor.github.io/Challenge-interior-consultant/"
+                target="_blank"
+                >Demo</a
+              >
+            </button>
+            <button>
+              <a
+                href="https://github.com/CEFET-Igor/Challenge-interior-consultant?tab=readme-ov-file"
+                target="_blank"
+                >Projeto</a
+              >
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <h2 class="capitalize">Desafio: my team page</h2>
+          <p>
+            Desafio para trabalhar com HTML e CSS, explorando o uso eficaz de
+            imagens, e ferramentas de layout responsivo.
+          </p>
+          <div class="buttons">
+            <button>
+              <a
+                href="https://cefet-igor.github.io/Challenge-my-team-page/"
+                target="_blank"
+                >Demo</a
+              >
+            </button>
+            <button>
+              <a
+                href="https://github.com/CEFET-Igor/Challenge-my-team-page"
+                target="_blank"
+                >Projeto</a
+              >
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <h2 class="capitalize">Desafio: Erro 404</h2>
+          <p>
+            Este foi primeiro desafio front-end, criando uma página estática de
+            "Erro 404".
+          </p>
+          <div class="buttons">
+            <button>
+              <a
+                href="https://cefet-igor.github.io/Challeng-404-not-found/"
+                target="_blank"
+                >Demo</a
+              >
+            </button>
+            <button>
+              <a
+                href="https://github.com/CEFET-Igor/Challeng-404-not-found"
+                target="_blank"
+                >Projeto</a
+              >
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <h2 class="capitalize">Projeto Cordel Moderno</h2>
+          <p>
+            Desafio proposto por Gustavo Guanabara em seu curso HTML-CSS.
+          </p>
+          <div class="buttons">
+            <button>
+              <a
+                href="https://cefet-igor.github.io/Projeto-Cordel-Moderno/"
+                target="_blank"
+                >Demo</a
+              >
+            </button>
+            <button>
+              <a
+                href="https://github.com/CEFET-Igor/Projeto-Cordel-Moderno"
+                target="_blank"
+                >Projeto</a
+              >
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <h2 class="capitalize">Projeto androide</h2>
+          <p>
+            Desafio proposto por Gustavo Guanabara em seu curso HTML-CSS.
+          </p>
+          <div class="buttons">
+            <button>
+              <a
+                href="https://cefet-igor.github.io/Projeto-Androide/"
+                target="_blank"
+                >Demo</a
+              >
+            </button>
+            <button>
+              <a
+                href="https://github.com/CEFET-Igor/Projeto-Androide"
+                target="_blank"
+                >Projeto</a
+              >
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <h2 class="capitalize">Pagina de login</h2>
+          <p>
+            Desenvolvi uma página de login interativa com animações nos campos
+            de preenchimento.
+          </p>
+          <div class="buttons">
+            <button>
+              <a href="https://cefet-igor.github.io/Login-Page" target="_blank"
+                >Demo</a
+              >
+            </button>
+            <button>
+              <a href="https://github.com/CEFET-Igor/Login-Page" target="_blank"
+                >Projeto</a
+              >
+            </button>
+          </div>
+        </div>
+      </section>
+    </section>
+
+    <footer>
+      <p>© 2025 Igor Augusto Guimarães Campos.</p>
+    </footer>
 
     <script src="index.js"></script>
   </body>
