feat: Melhorando os tópicos e os textos

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
         <section class="Resumo">
           <h1>Resumo</h1>
           <p>
-            Estudante de Engenharia de Computação, com conhecimento em HTML,
-            CSS, JavaScript, Python, Django, Git e Linux. Inglês avançado e
-            pacote Office avançado. Procurando oportunidades para desenvolver
+            Sou estudante de Engenharia de Elétrica, com experiência e
+            conhecimento em tecnologias como HTML, CSS, JavaScript, Python,
+            Django, Git e Linux. Procurando oportunidades para desenvolver
             minhas habilidades e crescer profissionalmente.
           </p>
         </section>
@@ -113,24 +113,50 @@
 
           <div class="info">
             <h2>Estagiário de Desenvolvimento Web</h2>
-            <h3><strong>DECOM/CEFET-MG</strong> (Fev. 2022 - Jul. 2024)</h3>
+            <h3><strong>DECOM/CEFET-MG</strong> (Fev. 2022 - Mar. 2025)</h3>
           </div>
           <p>
-            Desenvolvimento de atividades de Front-end utilizando HTML, CSS e
-            Bootstrap e Back-end utilizando Python, Django e JavaScript.
-            Integração e gerenciamento de banco de dados PostgreSQL. Controle de
-            versionamento com Bitbucket.
+            Neste projeto, desenvolvemos uma plataforma web para correção de
+            redações online, que será utilizada como uma ferramenta de ensino
+            para os alunos e servidores do CEFET-MG.
+          </p>
+          <p>
+            Utilizamos o framework Django para criar o projeto, um servidor da
+            Digital Ocean para hospedar, o Bitbucket para controle de versão e
+            PostgreSQL para o banco de dados. Desenvolvemos as atividades de
+            Front-end utilizando HTML, CSS e Bootstrap e Back-end utilizando
+            Python, Django e JavaScript.
+          </p>
+          <p>
+            Durante o tempo de trabalho entregamos o servidor completo para que
+            um grupo de alunos e servidores pudessem fazer testes na plataforma.
           </p>
 
           <div class="info">
-            <h2>Estagiário de Machine Learning</h2>
+            <a
+              href="https://piim-lab.github.io/RC-carbonation-analisys-ML/"
+              target="_blank">
+              <h2>Estagiário de Machine Learning</h2>
+            </a>
             <h3><strong>DECOM/CEFET-MG</strong> (Mar. 2022 - Mar. 2025)</h3>
           </div>
           <p>
-            Desenvolvimento de modelos preditivos para análise da carbonatação
-            em estruturas de concreto armado. Utilização de Python e bibliotecas
-            como Pandas, NumPy, Scikit-learn e Matplotlib. Organização e
-            controle de versão com repositório GitHub.
+            Este projeto é um projeto de pesquisa <span translate="no">(Iniciação Cientifica)</span>, onde
+            trabalhamos com a análise de dados de estruturas de concreto armado,
+            com o objetivo de desenvolver uma ferramenta para prever a vida útil
+            de estruturas de concreto armado.
+          </p>
+          <p>
+            Utilizamos Python e bibliotecas como Pandas, NumPy, Scikit-learn e
+            Matplotlib para desenvolver modelos preditivos. Utilizamos o GitHub
+            para controle de versão. Utilizamos a bibliteca shap para explicar
+            os modelos preditivos.
+          </p>
+          <p>
+            Durante o tempo de trabalho submetemos alguns artigos para
+            conferências e revistas científicas, entregamos um relatório com os
+            resultados obtidos e um repositório no GitHub com o código
+            desenvolvido.
           </p>
 
           <div class="info">
@@ -138,9 +164,23 @@
             <h3><strong>DECOM/CEFET-MG</strong> (Abr. 2023 - Jan. 2025)</h3>
           </div>
           <p>
-            Planejamento e ensino de aulas práticas de robótica e informática
-            para jovens de 12 a 16 anos em escolas públicas. Trabalhamos com
-            ferramentas open source, lecionando LibreOffice, Canva e GIMP.
+            O Enxurrada de Bits é um projeto de extensão que busca incentivar e
+            desenvolver em estudantes de escolas públicas de todo o Brasil o
+            interesse por programação e robótica por meio de cursos e eventos.
+          </p>
+          <p>
+            Utilizamos o Google Classroom para disponibilizar o material
+            didático e fazer avaliações, e Google jitsi para as aulas. Os
+            eventos foram realizados de forma presencial no CEFET-MG e em outras
+            instituições parceiras, contando com a presença de pais, alunos e
+            professores.
+          </p>
+          <p>
+            Permaneci como monitor voluntário do projeto por 3 semestres, 1
+            semestre nas turmas de robótica e 2 semestres nas turmas de
+            informática basica. Durante esse tempo, auxiliei os professores nas
+            aulas, planejei e ministrei aulas, e participei da organização de
+            eventos.
           </p>
         </section>
 
@@ -160,6 +200,7 @@
         </section>
       </section>
     </main>
+
     <section class="projetos">
       <h1>Projetos</h1>
       <p>
@@ -169,23 +210,28 @@
         de front-end.
       </p>
       <p>
-        Nos cards abaixo, apresento alguns dos projetos que desenvolvi. Neles, utilizei
-        conceitos como HTML semântico, técnicas de CSS para responsividade, além
-        de lógica para estilização e programação com pseudo-elementos em CSS,
-        HTML e JavaScript.
+        Nos cards abaixo, apresento alguns dos projetos que desenvolvi. Neles,
+        utilizei conceitos como HTML semântico, técnicas de CSS para
+        responsividade, além de lógica para estilização e programação com
+        pseudo-elementos em CSS, HTML e JavaScript.
       </p>
       <p>
-        Cada card tem um link para a demonstração do resultado final e
-        também para o repositório no GitHub, onde você pode conferir o README
-        com mais detalhes sobre cada um deles.
+        Cada card tem um link para a demonstração do resultado final e também
+        para o repositório no GitHub, onde você pode conferir o README com mais
+        detalhes sobre cada um deles.
       </p>
 
       <section class="cards">
         <div class="card">
-          <h2 class="capitalize">Desafio: designer de interiores</h2>
+          <h2>Desafio: interior designer</h2>
           <p>
-            O desafio é criar uma homepage responsiva para um consultório de
-            interiores.
+            Este projeto é um desafio proposto pela plataforma DevChallenges,
+            com o objetivo de criar uma homepage estática e responsiva para um
+            consultório de interiores.
+          </p>
+          <p>
+            O desafio tem como foco principal trabalhar boas praticas de
+            desenvolvimento web, transições e animações CSS.
           </p>
           <div class="buttons">
             <button>
@@ -205,10 +251,15 @@
           </div>
         </div>
         <div class="card">
-          <h2 class="capitalize">Desafio: my team page</h2>
+          <h2>Desafio: my team page</h2>
           <p>
-            Desafio para trabalhar com HTML e CSS, explorando o uso eficaz de
-            imagens, e ferramentas de layout responsivo.
+            Este projeto é um desafio proposto pela plataforma DevChallenges,
+            com o objetivo de criar uma página estática e responsiva para
+            apresentar uma equipe de trabalho.
+          </p>
+          <p>
+            O desafio tem como foco principal trabalhar com textos alinhados
+            verticalmente e imagens.
           </p>
           <div class="buttons">
             <button>
@@ -228,9 +279,10 @@
           </div>
         </div>
         <div class="card">
-          <h2 class="capitalize">Desafio: Erro 404</h2>
+          <h2>Desafio: Erro 404</h2>
           <p>
-            Este foi primeiro desafio front-end, criando uma página estática de
+            Este projeto é um desafio proposto pela plataforma DevChallenges,
+            com o objetivo de criar uma página estática para quando ocorre o
             "Erro 404".
           </p>
           <div class="buttons">
@@ -251,9 +303,14 @@
           </div>
         </div>
         <div class="card">
-          <h2 class="capitalize">Projeto Cordel Moderno</h2>
+          <h2>Projeto Cordel Moderno</h2>
           <p>
-            Desafio proposto por Gustavo Guanabara em seu curso HTML-CSS.
+            Este projeto foi um desafio proposto por Gustavo Guanabara em seu
+            curso de HTML e CSS
+          </p>
+          <p>
+            O objetivo foi recriar o estilo visual dos tradicionais cordéis
+            brasileiros, adaptando-o para uma página web.
           </p>
           <div class="buttons">
             <button>
@@ -273,10 +330,16 @@
           </div>
         </div>
         <div class="card">
-          <h2 class="capitalize">Projeto androide</h2>
+          <h2>Projeto androide</h2>
           <p>
-            Desafio proposto por Gustavo Guanabara em seu curso HTML-CSS.
+            Este projeto foi um desafio proposto por Gustavo Guanabara em seu
+            curso de HTML e CSS
           </p>
+          <p>
+            O objetivo era criar uma página web contando um pouco da historia do
+            androide, da evolução, e explicar o conceito de imagens dinâmicas.
+          </p>
+
           <div class="buttons">
             <button>
               <a
@@ -295,10 +358,16 @@
           </div>
         </div>
         <div class="card">
-          <h2 class="capitalize">Pagina de login</h2>
+          <h2>Pagina de login</h2>
           <p>
-            Desenvolvi uma página de login interativa com animações nos campos
-            de preenchimento.
+            Desenvolvi uma página de login interativa para atender a uma
+            necessidade pessoal, com foco em explorar transições e efeitos em
+            CSS.
+          </p>
+          <p>
+            O projeto conta com animações nos campos de preenchimento e serviu
+            como exercício de técnicas de transição e estilização utilizando
+            apenas CSS.
           </p>
           <div class="buttons">
             <button>
