feat: Adicionando meu curriculo PDF

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             <li>Ingles Avançado - CEFET-MG</li>
           </ul>
         </section>
+  
+        <button type="button">
+          <a href="doc/Curriculo Igor Campos.pdf" download="Igor Campos">Currículo</a>
+        </button>
       </section>
 
       <section class="right">
