--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </ul>
         </section>
   
-        <button type="button">
+        <button type="button" class="Curriculo">
           <a href="doc/Curriculo Igor Campos.pdf" download="Igor Campos">Currículo</a>
         </button>
       </section>
